src/test/deca/extension/context/invalid/uncompatible_type_in_array_declaration.deca
// Description:
//    Error in arry declaration, type float is incompatible with type int  
//
// Result:
//    INVALID_CAST: Type float\[\]\[\]\[\] cannot be cast to type int\[\]\[\]\[\]
//    line 9

{
       int[1][2][3] tab = {{{1.0, 2.0, 3.0}, {4.0, 5.0, 6.0}}};
}